Fixed typo in UI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Todo List</title>
+  <title>To-Do List</title> <!-- fixed typo: Todo -> To-Do -->
 </head>
 <body>
-  <h1>Todo List</h1>
-  <input type="text" id="newTodo" placeholder="New task">
+  <h1>To-Do List</h1> <!-- fixed typo: Todo -> To-Do -->
+  <input type="text" id="newTodo" placeholder="New Task"> <!-- fixed typo: task -> Task -->
   <button onclick="addTodo()">Add</button>
   <ul id="todoList"></ul>
 
