--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Advanced To-Do List</title>
+  <title>Devops To-Do List</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
