change title name

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,7 +90,7 @@
   </style>
 </head>
 <body>
-  <h1>Advanced To-Do List</h1>
+  <h1>Devops Advanced To-Do List</h1>
 
   <form id="todoForm">
     <input type="text" id="title" placeholder="Title" required />
