--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,7 +97,7 @@
     <textarea id="description" placeholder="Description"></textarea>
     <input type="date" id="dueDate" />
     <input type="url" id="link" placeholder="Reference Link (optional)" />
-    <button type="submit">Add Task</button>
+    <button type="submit">Add New Task</button>
   </form>
 
   <ul id="todoList"></ul>
